src/widgets/snapshots/repoverlay__widgets__multi_select_tree__tests__snapshot_tree_collapsed_parent.snap
---
source: src/widgets/multi_select_tree.rs
expression: buffer_to_string(&buffer)
---
▶ [ ] root/
  [ ] lone.txt
