src/widgets/snapshots/repoverlay__widgets__multi_select_tree__tests__snapshot_tree_deep_nesting.snap
---
source: src/widgets/multi_select_tree.rs
expression: buffer_to_string(&buffer)
---
▼ [-] root/
  ▼ [-] sub/
      [✓] a.txt
      [ ] b.txt
    [ ] c.txt
