src/widgets/snapshots/repoverlay__widgets__multi_select_tree__tests__snapshot_tree_tristate_all_checked.snap
---
source: src/widgets/multi_select_tree.rs
expression: buffer_to_string(&buffer)
---
▼ [✓] root/
    [✓] a.txt
    [✓] b.txt
  [ ] lone.txt
